--- a/Css/mediaQueries.css
+++ b/Css/mediaQueries.css
@@ -1,12 +1,32 @@
 
 @media (max-width:768px) {
+ 
     .logo{
-        font-size: 18px;
+        font-size: 2.5rem;
+        align-items: center;
+        justify-content: center;
     }
-    .nav-links{
+
+    .nav-links a:not(:nth-child(4)){
         display: none;
     }
-    .burger{
+  
+    .nav-links a:nth-child(4){
+        position: absolute;
+        left: 92%;
         display: block;
+        cursor: pointer;
+        color: #373737;
+        font-size: 3rem;
+        display: flex;
+        justify-content: flex-end;
+     }
+
+     h1{
+        top:45rem;
+        font-size: 4rem;
      }
 }
+
+
+
