--- a/Css/style.css
+++ b/Css/style.css
@@ -5,6 +5,7 @@
     font-family: 'Open Sans', sans-serif;
     list-style: none;
     text-decoration: none;
+    font-size: 62.5%;
 }
 
 nav{
@@ -13,30 +14,31 @@ nav{
     align-items: center;
     min-height: 8vh;
     background-color: transparent;
-    padding: 5px;
 }
 
 .logo{
     color: rgb(51, 51, 51);
-    font-size: 22px;
+    font-size: 3.5rem;
     letter-spacing: 3px;
     text-transform: uppercase;
 }
 
 .nav-links{
+    width: 40%;
+    font-size: 2.5rem;
+    letter-spacing: 1px;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    width: 40%;
-    font-size: 18px;
-    letter-spacing: 1px;
 }
 
 .nav-links a{
+    display: flex;
+    align-items: center;
     color: rgb(112, 112, 112);
 }
 
-.burger{
+.nav-links a:nth-child(4){
     display: none;
 }
 
@@ -48,7 +50,27 @@ header{
     background: url('../image/image-main.jpg');
     background-size: cover;
     background-position: center;
-    filter: grayscale(40%);}
+    filter: grayscale(40%);
+    background-color: blue;
+}
+
+h1{
+    text-align: center;
+    margin: 0;
+    font-size: 5rem;
+    background-image: linear-gradient(to left, #141414, rgb(255, 255, 255));
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    position: relative;
+    text-transform: uppercase;
+    top:29rem;
+    letter-spacing: 5px;
+}
+
+/* Stories */
+
+
 
 
 
