--- a/Css/style.css
+++ b/Css/style.css
@@ -6,6 +6,8 @@
     list-style: none;
     text-decoration: none;
     font-size: 62.5%;
+    filter: grayscale(15%);
+
 }
 
 nav{
@@ -47,11 +49,9 @@ nav{
 header{
     height: 100vh; 
     width:100%;
-    background: url('../image/image-main.jpg');
+    background: url('../image/forest_mist_main_image.jpg');
     background-size: cover;
     background-position: center;
-    filter: grayscale(40%);
-    background-color: blue;
 }
 
 h1{
@@ -70,7 +70,54 @@ h1{
 
 /* Stories */
 
+.stories-container{
+    display: grid;
+    grid-template-rows: repeat(10, 1fr); 
+    grid-template-columns: repeat(10, 1fr); 
+    width: 100%;
+    height: 70vh; 
+    padding: 8vh;
+    background-color: rgb(0, 0, 0); 
+    gap: 10px;
 
+}
 
+.title-p1{
+    grid-column: 1/4;
+    grid-row: 4/5;
+    font-size: 2.6rem;
+    color: rgb(196, 196, 196);
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    text-transform: uppercase;
+    background-image: linear-gradient(to left, #141414, rgb(175, 175, 175));
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+}
+
+.text-p1{
+    grid-column: 1/4;
+    grid-row: 5/10;
+    font-size: 1.6rem;
+    color: rgb(122, 122, 122);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.stories-picture{
+    grid-column: 4/-1;
+    grid-row: 1/-1;
+    background-image: url('../Image/forest_road_in_the_mist.jpg');
+    background-position: center; 
+    background-size: cover;
+    /* clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%); */
+    border-radius: 5px;
+
+}
+
+/* Second Section */
 
 
