--- a/Css/original.css
+++ b/Css/original.css
@@ -66,26 +66,24 @@ h1{
     top:29rem;
     letter-spacing: 5px;
 }
-/* ne plus toucher au dessus */
 
 /* Stories */
 
 .stories-container{
     display: grid;
-    grid-template-rows: repeat(20, 1fr); 
+    grid-template-rows: repeat(10, 1fr); 
     grid-template-columns: repeat(10, 1fr); 
     width: 100%;
-    height: 140vh; 
-    padding:8vh;
+    height: 70vh; 
+    padding: 8vh;
+    background-color: rgb(0, 0, 0); 
     gap: 10px;
-    /* background: rgb(255,247,247);
-    background: linear-gradient(0deg, rgba(255,247,247,1) 0%, rgba(242,242,242,1) 11%, rgba(0,0,0,1) 25%); */
-    background: black;
+
 }
 
 .title-p1{
     grid-column: 1/4;
-    grid-row: 3/4;
+    grid-row: 4/5;
     font-size: 2.6rem;
     color: rgb(196, 196, 196);
     display: flex;
@@ -100,7 +98,7 @@ h1{
 
 .text-p1{
     grid-column: 1/4;
-    grid-row: 4/8;
+    grid-row: 5/10;
     font-size: 1.6rem;
     color: rgb(122, 122, 122);
     display: flex;
@@ -110,32 +108,15 @@ h1{
 
 .stories-picture{
     grid-column: 4/-1;
-    grid-row: 1/11;
-    background-image: url('../Image/man_hoodie_yellow_walk_misty_forest.jpg');
+    grid-row: 1/-1;
+    background-image: url('../Image/forest_road_in_the_mist.jpg');
     background-position: center; 
     background-size: cover;
     clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
     border-radius: 5px;
+
 }
 
 /* Second Section */
 
-.text-p2{
-    grid-column: 1/4;
-    grid-row: 12/-1;
-    font-size: 1.6rem;
-    color: rgb(122, 122, 122);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 
-.stories-picture-2{
-    grid-column: 4/-1;
-    grid-row: 11/-1;
-    background-image: url('../Image/man_hoodie_yellow_walk_misty_forest.jpg');
-    background-position:bottom; 
-    background-size: cover;
-    clip-path: polygon(0 0, 75% 0, 100% 100%, 25% 100%);
-    border-radius: 5px;
-}
