--- a/Css/mediaQueries.css
+++ b/Css/mediaQueries.css
@@ -1,6 +1,6 @@
 
 @media (max-width:768px) {
- 
+
     .logo{
         font-size: 2.5rem;
         align-items: center;
@@ -23,9 +23,27 @@
      }
 
      h1{
-        top:45rem;
-        font-size: 4rem;
+        top:24rem;
+        font-size: 3rem;
      }
+
+     /* stories */
+     
+     .stories-picture{
+        background-position: top; 
+    }
+
+    .title-p1{
+        font-size: 1.6rem;
+    }
+
+    .text-p1{
+        font-size: 1.1rem;
+    }
+
+    .text-p2{
+        font-size: 1.1rem;
+    }
 }
 
 
