--- a/Css/mediaQueries.css
+++ b/Css/mediaQueries.css
@@ -1,3 +1,27 @@
+@media (max-width:958px) {
+
+    .stories-picture{
+        background-image: url('../Image/image1.jpg');
+        background-position: center; 
+        background-size: cover;
+    }
+
+    .stories-picture{
+        background-position: top; 
+    }
+
+    .title-p1{
+        font-size: 1.9rem;
+    }
+
+    .text-p1{
+        font-size: 1.5rem;
+    }
+
+    .text-p2{
+        font-size: 1.5rem;
+    }
+}
 
 @media (max-width:768px) {
 
@@ -28,21 +52,92 @@
      }
 
      /* stories */
-     
-     .stories-picture{
+    .stories-picture{
         background-position: top; 
     }
 
     .title-p1{
-        font-size: 1.6rem;
+        font-size: 1.7rem;
     }
 
     .text-p1{
-        font-size: 1.1rem;
+        font-size: 1.4rem;
     }
 
     .text-p2{
-        font-size: 1.1rem;
+        font-size: 1.4rem;
+    }
+
+    /* features */
+    .features-title{
+        font-size: 1.7rem;
+    }
+}
+
+@media (max-width:698px) {
+    .title-p1{
+        font-size: 1.4rem;
+    }
+
+    .text-p1{
+        font-size: 1.2rem;
+    }
+
+    .text-p2{
+        font-size: 1.2rem;
+    }
+
+      /* features */
+
+    .features-title{
+    font-size: 1.4rem;
+    }
+}
+
+@media (max-width:590px) {
+
+    .title-p1{
+        font-size: 1.3rem;
+    }
+
+    .text-p1{
+        font-size: 1rem;
+    }
+
+    .text-p2{
+        font-size: 1rem;
+    }
+
+    .features-container{
+        display:flex;
+        flex-wrap: wrap;
+        padding:15px;
+        gap: 12px;
+        background-color: rgb(7, 7, 7);
+        width: 100%;
+        height: 800vh;
+    }
+
+    .features-title{
+        font-size: 1.2rem;
+    }
+}
+
+@media (max-width:410px) {
+    .title-p1{
+        font-size: .9rem;
+    }
+
+    .text-p1{
+        font-size: .8rem;
+    }
+
+    .text-p2{
+        font-size: .8rem;
+    }
+
+    .features-title{
+        font-size: 0.9rem;
     }
 }
 
