--- a/Css/style.css
+++ b/Css/style.css
@@ -61,6 +61,11 @@ html{
     color: rgb(112, 112, 112);
 }
 
+.nav-links :hover{
+    cursor: pointer;
+    color: rgb(51, 51, 51);
+}
+
 .nav-links a:nth-child(4){
     display: none;
 }
@@ -83,7 +88,7 @@ h1{
     text-align: center;
     margin: 0;
     font-size: 5rem;
-    background-image: linear-gradient(to left, #141414, rgb(255, 255, 255));
+    background-image: linear-gradient(to left, #0c0c0c, rgb(223, 223, 223));
     -webkit-background-clip: text;
     background-clip: text;
     color: transparent;
