--- a/Css/mediaQueries.css
+++ b/Css/mediaQueries.css
@@ -21,6 +21,10 @@
     .text-p2{
         font-size: 1.5rem;
     }
+
+    .fa-arrow-circle-up{
+        font-size: 8rem;
+    }
 }
 
 @media (max-width:768px){
@@ -129,7 +133,7 @@
         gap: 12px;
         background-color: rgb(7, 7, 7);
         width: 100%;
-        height: 800vh;
+        height: 1000vh;
     }
 
     .features-title{
@@ -147,6 +151,11 @@
 
     .items-font i{
         font-size:3rem;
+    }
+
+
+    .fa-arrow-circle-up{
+        font-size: 6rem;
     }
 }
 
@@ -177,6 +186,10 @@
 
     .items-font i{
         font-size:2rem;
+    }
+
+    .fa-arrow-circle-up{
+        font-size: 4rem;
     }
 }
 
