--- a/Css/style.css
+++ b/Css/style.css
@@ -302,7 +302,7 @@ h1{
 }
 
 .items-font{
-    grid-column: 3/9;
+    grid-column: 1/-1;
     grid-row: 4/5;
     display: flex;
     align-content: center;
@@ -319,3 +319,25 @@ h1{
     transform: scale(1.2);
     transition: 1s;
 }
+
+.arrow{
+    grid-column: 1/-1;
+    grid-row: 6/-1;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+}
+
+.fa-arrow-circle-up{
+    color: rgba(214, 214, 214, 0.7);
+    font-size: 9rem;
+}
+
+.fa-arrow-circle-up:hover{
+    color: rgba(255, 255, 255, 0.7);
+    transform: scale(1.2);
+    transition: 1s ease-in-out;
+}
+
+
+
