--- a/Css/mediaQueries.css
+++ b/Css/mediaQueries.css
@@ -92,6 +92,7 @@
 }
 
 @media (max-width:698px) {
+    
     .title-p1{
         font-size: 1.4rem;
     }
@@ -104,18 +105,16 @@
         font-size: 1.2rem;
     }
 
-      /* features */
-
     .features-title{
     font-size: 1.4rem;
     }
 
 }
-
+/*  */
 @media (max-width:590px) {
 
     .title-p1{
-        font-size: 1.5rem;
+        font-size: 1.3rem;
     }
 
     .text-p1{
@@ -126,6 +125,10 @@
         font-size: 1rem;
     }
 
+    .stories-container{
+        height: 110vh; 
+    }
+
     .features-container{
         display:flex;
         flex-wrap: wrap;
@@ -133,16 +136,16 @@
         gap: 12px;
         background-color: rgb(7, 7, 7);
         width: 100%;
-        height: 1000vh;
+        height: 700vh;
     }
 
     .features-title{
-        font-size: 1.5rem;
+        font-size: 1.3rem;
     }
 
     /*contact*/
     .contact-title{
-        font-size: 1.5rem;
+        font-size: 1.3rem;
     }
 
     .contact-p{
@@ -159,39 +162,38 @@
     }
 }
 
-@media (max-width:410px) {
-    .title-p1{
-        font-size: 1.3rem;
-    }
+@media (max-width:520px) {
 
-    .text-p1{
-        font-size: .8rem;
-    }
-
-    .text-p2{
-        font-size: .8rem;
+    .features-container{
+        height: 600vh;
     }
 
     .features-title{
         font-size: 1.3rem;
     }
+}
 
-    .contact-title{
-        font-size: 1.3rem;
+
+@media (max-width:460px) {
+
+    .stories-container{
+        height: 90vh; 
     }
 
-    .contact-p{
-        font-size: 1rem;
-    }
-
-    .items-font i{
-        font-size:2rem;
-    }
-
-    .fa-arrow-circle-up{
-        font-size: 4rem;
+    .features-container{
+        height: 540vh;
     }
 }
 
 
+@media (max-width:420px) {
+
+    .stories-container{
+        height: 80vh; 
+    }
+
+    .features-container{
+        height: 500vh;
+    }
+}
 
