--- a/Css/mediaQueries.css
+++ b/Css/mediaQueries.css
@@ -89,6 +89,11 @@
 
 @media (max-width:698px) {
 
+    h1{
+        top:32rem;
+        font-size: 3rem;
+     }
+
     .title-p1{
         font-size: 1.4rem;
     }
@@ -106,8 +111,13 @@
     }
 
 }
-/*  */
+
 @media (max-width:590px) {
+
+    h1{
+        top:33rem;
+        font-size: 2.4rem;
+     }
 
     .stories-container{
         height: 110vh; 
@@ -139,7 +149,6 @@
         font-size: 1.3rem;
     }
 
-    /*contact*/
     .contact-title{
         font-size: 1.3rem;
     }
@@ -171,6 +180,11 @@
 
 @media (max-width:480px) {
 
+    h1{
+        top:32rem;
+        font-size: 1.9rem;
+     }
+
     .stories-container{
         height: 90vh; 
     }
@@ -191,7 +205,6 @@
     }
 }
 
-
 @media (max-width:420px) {
     .text-p1{
         font-size: .7rem;
@@ -205,12 +218,11 @@
     }
 }
 
-
 @media (max-width:380px) {
 
     h1{
         top:32rem;
-        font-size: 2rem;
+        font-size: 1.6rem;
      }
 
     .stories-container{
