--- a/Css/ipad_pro.css
+++ b/Css/ipad_pro.css
@@ -31,3 +31,15 @@ h1{
 .features-title{
     font-size: 3rem;
 }
+
+.contact-title{
+    font-size: 3rem;
+}
+
+.contact-p{
+    font-size: 2.5rem;
+}
+
+.items-font i{
+    font-size: 5rem;
+}
