--- a/Css/iphone6_7_8PLUS.css
+++ b/Css/iphone6_7_8PLUS.css
@@ -5,19 +5,19 @@ h1{
 }
 
 .stories-container{
-    height: 100vh; 
+    height: 80vh; 
 }
 
 .title-p1{
-    font-size: 1.3rem;
+    font-size: 1rem;
 }
 
 .text-p1{
-    font-size: 0.8rem;
+    font-size: 0.7rem;
 }
 
 .text-p2{
-    font-size: 0.8rem;
+    font-size: 0.7rem;
 }
 
 .features-container{
@@ -25,5 +25,17 @@ h1{
 }
 
 .features-title{
-    font-size: 1.3rem;
+    font-size: 1rem;
+}
+
+.contact-title{
+    font-size: 1rem;
+}
+
+.contact-p{
+    font-size: 1rem;
+}
+
+.items-font i{
+    font-size: 2rem;
 }
