--- a/Css/pixel2.css
+++ b/Css/pixel2.css
@@ -4,9 +4,21 @@ h1{
 }
 
 .features-container{
-    height: 438vh;
+    height: 440vh;
 }
 
 .features-title{
     font-size: 1.3rem;
+}
+
+.contact-title{
+    font-size: 1.3rem;
+}
+
+.contact-p{
+    font-size: 1rem;
+}
+
+.items-font i{
+    font-size: 2.5rem;
 }
