--- a/Css/style.css
+++ b/Css/style.css
@@ -10,19 +10,70 @@
 html{
     filter: grayscale(15%);
     /*make some pb*/
-    scroll-behavior: smooth;
+    scroll-behavior: smooth;  
 }
 
-#navigation{
-    position: fixed;
-    z-index: 40;
-    width: 100%;
+.navbar {
     display: flex;
-    justify-content: space-around;
+    width: 100%;
+    justify-content: space-between;
     align-items: center;
-    min-height: 8vh;
-    background-color: transparent;
+    padding: 1rem 3rem;
+    position: fixed;
+    z-index: 3;
     font-family: 'Open Sans', sans-serif;
+}
+
+.logo {
+    color: rgb(51, 51, 51);
+    font-size: 2.5rem;
+    letter-spacing: .18rem;
+    text-transform: uppercase;
+}
+
+.logo:hover{
+    cursor: pointer;
+    color: rgb(119, 119, 119);
+    transition: 1s ease-in-out;
+}
+
+.nav-item {
+    margin-left: 10rem;
+}
+
+.nav-links{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav-links.active {
+    left: 0;
+}
+
+.nav-link{
+    font-size: 1.7rem;
+    letter-spacing: .18rem;
+    color: rgb(102, 102, 102);
+}
+
+.nav-link:hover{
+    cursor: pointer;
+    color: rgb(51, 51, 51);
+}
+
+.hamburger-icon {
+    display: none;
+}
+
+.bar {
+    display: block;
+    height: .18rem;
+    margin: 0.3rem auto;
+    width: 1.56rem;
+    -webkit-transition: all 0.9s ease-in-out;
+    transition: all 0.9s ease-in-out;
+    background-color: rgb(51, 51, 51);
 }
 
 .fade-in{
@@ -38,37 +89,6 @@ html{
   @-webkit-keyframes fade-in {
     0% {opacity:0;}
     100% {opacity:1;}
-}
-
-.logo{
-    color: rgb(51, 51, 51);
-    font-size: 3.5rem;
-    letter-spacing: 3px;
-    text-transform: uppercase;
-}
-
-.nav-links{
-    width: 40%;
-    font-size: 2.5rem;
-    letter-spacing: 1px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.nav-links a{
-    display: flex;
-    align-items: center;
-    color: rgb(112, 112, 112);
-}
-
-.nav-links :hover{
-    cursor: pointer;
-    color: rgb(51, 51, 51);
-}
-
-.nav-links a:nth-child(4){
-    display: none;
 }
 
 /* Header */
@@ -95,7 +115,7 @@ h1{
     color: transparent;
     position: relative;
     text-transform: uppercase;
-    top:29rem;
+    top:28rem;
     letter-spacing: 15px;
     font-family: 'Poppins', sans-serif;
 }
