--- a/Css/mediaQueries.css
+++ b/Css/mediaQueries.css
@@ -1,7 +1,12 @@
 @media (max-width:1120px) {
     
+    h1{
+        top:48rem;
+        font-size: 5rem;
+    }
+
     .stories-picture{
-        background-image: url('../Image/image1.jpg');
+        background-image: url('../Image/misty_forest.jpg');
         background-position: center; 
         background-size: cover;
     }
@@ -64,10 +69,10 @@
         cursor: pointer;
     }
 
-     h1{
-        top:28rem;
-        font-size: 3rem;
-     }
+    h1{
+        top:52rem;
+        font-size: 3.5rem;
+    }
 
     .stories-picture{
         background-position: top; 
@@ -105,9 +110,9 @@
 @media (max-width:698px) {
 
     h1{
-        top:32rem;
+        top:52rem;
         font-size: 3rem;
-     }
+    }
 
     .title-p1{
         font-size: 1.4rem;
@@ -130,9 +135,9 @@
 @media (max-width:590px) {
 
     h1{
-        top:33rem;
+        top:53rem;
         font-size: 2.4rem;
-     }
+    }
 
     .stories-container{
         height: 110vh; 
