--- a/Css/iphone6_7_8PLUS.css
+++ b/Css/iphone6_7_8PLUS.css
@@ -21,7 +21,10 @@ h1{
 }
 
 .features-container{
-    height: 436vh;
+    display:block;
+    height: 450vh;
+    padding:15px;
+    gap: 15px;
 }
 
 .features-title{
