--- a/Css/galaxy.css
+++ b/Css/galaxy.css
@@ -1,44 +1,37 @@
 
 h1{
-    top:24.5rem;  
-    font-size: 2rem;
+    top:28rem;
+    font-size: 1.4rem;
+    letter-spacing: 1rem;
 }
-
 .stories-container{
     height: 80vh; 
 }
-
 .title-p1{
-    font-size: 1rem;
+    font-size: .9rem;
 }
-
 .text-p1{
     font-size: 0.7rem;
 }
-
 .text-p2{
     font-size: 0.7rem;
 }
-
 .features-container{
     display:block;
-    height: 475vh;
-    padding:15px;
-    gap: 15px;
+    height:100%;
+    width:100%;
+    padding:1.5rem;
+    gap: 1.5rem;
 }
-
 .features-title{
     font-size: 1rem;
 }
-
 .contact-title{
+    font-size: 1.2rem;
+}
+.contact-p{
     font-size: 1rem;
 }
-
-.contact-p{
-    font-size: .9rem;
-}
-
 .items-font i{
     font-size: 2.5rem;
 }
