--- a/Css/ipad.css
+++ b/Css/ipad.css
@@ -1,39 +1,33 @@
 
 h1{
-    top:45rem;  
-    font-size: 3rem;
+    top:44rem;  
+    font-size: 4rem;
 }
-
 .stories-container{
     height: 100vh; 
 }
-
 .title-p1{
     font-size: 2rem;
 }
-
 .text-p1{
-    font-size: 1.3rem;
+    font-size: 1.4rem;
 }
-
 .text-p2{
-    font-size: 1.3rem;
+    font-size: 1.4rem;
 }
-
 .features-title{
     font-size: 2rem;
 }
-
 .features-container{
-    display:flex;
-    flex-wrap: wrap;
-    height: 600vh;
+    display:block;
+    height:100%;
+    width:100%;
+    padding:1.5rem;
+    gap: 1.5rem;
 }
-
 .contact-title{
-    font-size: 2rem;
+    font-size: 2.5rem;
 }
-
 .contact-p{
-    font-size: 1.8rem;
+    font-size: 2rem;
 }
