--- a/Css/ipad_pro.css
+++ b/Css/ipad_pro.css
@@ -3,42 +3,34 @@ h1{
     top:55rem;  
     font-size: 5rem;
 }
-
 .stories-container{
     height: 100vh; 
 }
-
 .title-p1{
     font-size: 3rem;
 }
-
 .text-p1{
-    font-size: 1.7rem;
+    font-size: 1.8rem;
 }
-
 .text-p2{
-    font-size: 1.7rem;
+    font-size: 1.8rem;
 }
-
 .features-container{
     display:block;
-    height: 595vh;
-    padding:15px;
-    gap: 15px;
+    height:100%;
+    width:100%;
+    padding:1.5rem;
+    gap: 1.5rem;
 }
-
 .features-title{
     font-size: 3rem;
 }
-
 .contact-title{
     font-size: 3rem;
 }
-
 .contact-p{
     font-size: 2.5rem;
 }
-
 .items-font i{
     font-size: 5rem;
 }
