--- a/Css/iphone6_7_8PLUS.css
+++ b/Css/iphone6_7_8PLUS.css
@@ -1,44 +1,37 @@
 
 h1{
-    top:28rem;  
-    font-size: 2rem;
+    top:31rem;  
+    font-size: 2.4rem;
+    letter-spacing: .4rem;
 }
-
 .stories-container{
-    height: 80vh; 
+    height: 90vh; 
 }
-
 .title-p1{
-    font-size: 1rem;
+    font-size: 1.3rem;
 }
-
 .text-p1{
-    font-size: 0.7rem;
+    font-size: .8rem;
 }
-
 .text-p2{
-    font-size: 0.7rem;
+    font-size: .8rem;
 }
-
 .features-container{
     display:block;
-    height: 450vh;
-    padding:15px;
-    gap: 15px;
+    height:100%;
+    width:100%;
+    padding:1.5rem;
+    gap: 1.5rem;
 }
-
 .features-title{
-    font-size: 1rem;
+    font-size: 1.3rem;
 }
-
 .contact-title{
-    font-size: 1rem;
+    font-size:1.3rem;
 }
-
 .contact-p{
-    font-size: 1rem;
+    font-size: 1.2rem;
 }
-
 .items-font i{
-    font-size: 2rem;
+    font-size: 2.5rem;
 }
