--- a/Css/iphoneX.css
+++ b/Css/iphoneX.css
@@ -1,42 +1,37 @@
 
 h1{
-    top:28rem;  
-    font-size: 2rem;
+    top:34rem;  
+    font-size: 2.4rem;
+    letter-spacing: .4rem;
 }
-
 .stories-container{
-    height: 65vh; 
+    height: 90vh; 
 }
-
 .title-p1{
-    font-size: 1rem;
+    font-size: 1.3rem;
 }
-
 .text-p1{
-    font-size: .7rem;
+    font-size: .8rem;
 }
-
 .text-p2{
-    font-size: .7rem;
+    font-size: .8rem;
 }
-
 .features-container{
     display:block;
-    height: 370vh;   
+    height:100%;
+    width:100%;
+    padding:1.5rem;
+    gap: 1.5rem;
 }
-
 .features-title{
-    font-size: 1rem;
+    font-size: 1.3rem;
 }
-
 .contact-title{
-    font-size: 1rem;
+    font-size:1.3rem;
 }
-
 .contact-p{
-    font-size: .9rem;
+    font-size: 1.2rem;
 }
-
 .items-font i{
-    font-size: 2rem;
+    font-size: 2.5rem;
 }
