--- a/Css/pixel2_XL.css
+++ b/Css/pixel2_XL.css
@@ -1,27 +1,21 @@
 h1{
-    top:30rem;  
-    font-size: 2.8rem;
+    top:35rem;  
+    font-size: 2.5rem;
+    letter-spacing: .4rem;
 }
-
 .features-container{
     display:block;
-    height: 419vh;
-    padding:15px;
-    gap: 15px;
+    height:100%;
+    width:100%;
+    padding:1.5rem;
+    gap: 1.5rem;
 }
-
-.features-title{
-    font-size: 1.3rem;
-}
-
 .contact-title{
     font-size: 1.3rem;
 }
-
 .contact-p{
     font-size: 1rem;
 }
-
 .items-font i{
     font-size: 2.5rem;
 }
