media queries adjustments v3

--- a/Css/style.css
+++ b/Css/style.css
@@ -116,7 +116,7 @@ h1{
     position: relative;
     text-transform: uppercase;
     top:28rem;
-    letter-spacing: 15px;
+    letter-spacing: 2rem;
     font-family: 'Poppins', sans-serif;
 }
 
